Web view test is failing
Trying to update to 3.37.90 for Debian and Ubuntu, the build is failing due to a test error
The output from the failed tests:
13/13 Web view test FAIL 0.53s (killed by signal 5 SIGTRAP)
--- command ---
07:44:42 G_TEST_SRCDIR='/<<PKGBUILDDIR>>/tests' GSETTINGS_BACKEND='memory' GSETTINGS_SCHEMA_DIR='/<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/data' G_TEST_BUILDDIR='/<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/tests' PATH='/<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/src' /<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/tests/test-ephy-web-view
--- stdout ---
# random seed: R02S276ae57e3662f05f5173e435818a70b9
# GLib-GIO-DEBUG: _g_io_module_get_default: Found default implementation memory (GMemorySettingsBackend) for ?gsettings-backend?
# GLib-GIO-DEBUG: _g_io_module_get_default: Found default implementation local (GLocalVfs) for ?gio-vfs?
1..5
# Start of embed tests
# Start of ephy-web-view tests
# SEARCH localhost localdomain:8080/home/
# SEARCH ./
# NO SEARCH localhost
# NO SEARCH localhost.localdomain
# NO SEARCH localhost.localdomain:8080
# NO SEARCH localhost.localdomain:8080/home/
# NO SEARCH gnome.org
# NO SEARCH www.gnome.org
# NO SEARCH http://www.gnome.org
# NO SEARCH 192.168.1.1
# NO SEARCH 192.168.1.1:80
# NO SEARCH f80e::2a1:f85f:fc8f:a0d1
ok 1 /embed/ephy-web-view/non_search_regex
# GLib-DEBUG: posix_spawn avoided (child_setup specified)
ok 2 /embed/ephy-web-view/normalize_or_autosearch
# GLib-DEBUG: posix_spawn avoided (child_setup specified)
# [127.0.0.1:12321] -> http://127.0.0.1:12321/
Bail out! FATAL-WARNING: Cannot fetch source for filter 1f353f7cdbb012b9fb1226455f1b3becba42070e1970c1524996fa3a871af406 from <https://easylist-downloads.adblockplus.org/easylist_min_content_blocker.json>: Error resolving ?easylist-downloads.adblockplus.org?: Name or service not known
--- stderr ---
** (/<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/tests/test-ephy-web-view:13685): WARNING **: 07:44:42.601: Cannot fetch source for filter 1f353f7cdbb012b9fb1226455f1b3becba42070e1970c1524996fa3a871af406 from <https://easylist-downloads.adblockplus.org/easylist_min_content_blocker.json>: Error resolving ?easylist-downloads.adblockplus.org?: Name or service not known
-------
Full log written to /<<PKGBUILDDIR>>/obj-x86_64-linux-gnu/meson-logs/testlog.txt
FAILED: meson-test
/usr/bin/meson test --no-rebuild --print-errorlogs
ninja: build stopped: subcommand failed.
cd obj-x86_64-linux-gnu && tail -v -n \+0 meson-logs/testlog.txt
==> meson-logs/testlog.txt <==
should that test be flagged as an online one and move to the section bellow with GSB service test?