filter-manager: Disable filter manager functionality in test mode

As filter manager is automatically started during ephy embed shell bringup it causes
network access (filter download). This breaks during offline tests for every
UI test.

Disable filter manager functionally in this case.

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/1314